# BLS_CPI

./: CPI.ipynb  CPI.py  Dashboard.py  README.md  pyproject.toml  script.py  styles.css
CPI_Data/: All_Items.txt  All_Items_Less_Food_Energy.txt  CPI_data.csv  CUUR0000AA0.txt  CUUR0000SA0.txt  Energy.txt  Food_At_Home.txt  Food_Away_From_Home.txt  Food_Beverages.txt  NSA_MoM_CPI_data.csv  NSA_YoY_CPI_data.csv  SA_MoM_CPI_data.csv  SA_YoY_CPI_data.csv  Shelter.txt  cleaned_CPI_data.csv  summary.txt
