[tool.poetry]
name = "bls-cpi"
version = "0.1.0"
description = ""
authors = ["Eric Bottinelli <ericbottinelli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
requests = "^2.32.3"
prettytable = "^3.11.0"
pandas = "^2.2.2"
streamlit = "^1.37.1"
matplotlib = "^3.9.2"
plotly = "^5.23.0"
beautifulsoup4 = "^4.12.3"
transformers = "^4.44.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
